# backend-api/routes/api/product/product.route.js
@@ -3,6 +3,7 @@ const {
     addProductController,
     getProductsByCategoryIdController,
     deleteProductByIdController,
+    updateProductController,
 } = require("../../../presentation/controller/product/product.controller");
 const { upload } = require("../../../middleware/multer.middleware");
 const {
@@ -11,6 +12,7 @@ const {
 const router = express.Router();
 
 router.post("/add-product", upload, addProductController);
+router.put("/update-product", upload, updateProductController);
 router.get("/get-product-list-by-company-id/:id", getProductListByCompanyIdController);
 router.get("/get-products-by-category-id", getProductsByCategoryIdController);
 router.delete("/delete-product/:product_id", deleteProductByIdController);
